--- a/public/index.html
+++ b/public/index.html
@@ -26,11 +26,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Employee Database</title>
+    <title>Magician's Red: Prophecy</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div class="container-fluid" id="root"" style="margin-bottom: 30%"></div>
+    <div class="container-fluid" id="root" style="padding-left: 0; padding-right: 0;"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
